Comitando as novas atualizações

--- a/.env
+++ b/.env
@@ -8,3 +8,11 @@ DB_USERNAME=root
 PASSWORD=""
 DATABASE=instadev
 DB_PORT=3306
+
+#bcryptjs
+HASH_BCRYPT=dcee57ceb0b251443b2b1c74f9f64187
+
+#crypto
+SECRET_CRYPTO=8425196a7e5f6a3071fe80bc22626250
+
+EXPIRE_IN=7d
