--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonschema": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
-    "sequelize": "^6.37.0"
+    "sequelize": "^6.37.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
